--- a/index.html
+++ b/index.html
@@ -1,51 +1,159 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Calculator</title>
+  <title>Advanced Calculator</title>
   <style>
     body {
-      font-family: Arial;
-      text-align: center;
-      margin-top: 50px;
+      font-family: Arial, sans-serif;
+      background: #eaeaea;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      transition: 0.3s;
     }
+
+    body.dark {
+      background: #121212;
+      color: white;
+    }
+
+    .calculator {
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      width: 320px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+
+    body.dark .calculator {
+      background: #1e1e1e;
+    }
+
     input {
       padding: 10px;
       margin: 5px;
-      width: 150px;
+      width: 90%;
+      font-size: 16px;
     }
-    button {
-      padding: 10px 20px;
+
+    .buttons button {
+      padding: 12px;
       margin: 5px;
+      width: 60px;
+      font-size: 18px;
+      cursor: pointer;
+      border: none;
+      border-radius: 6px;
+      background: #4CAF50;
+      color: white;
+    }
+
+    .buttons button:hover {
+      opacity: 0.8;
+    }
+
+    .dark-toggle {
+      margin-bottom: 10px;
+      cursor: pointer;
+      background: #333;
+      color: white;
+      border: none;
+      padding: 8px;
+      border-radius: 5px;
+    }
+
+    #result {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #2196F3;
+    }
+
+    body.dark #result {
+      color: #90CAF9;
+    }
+
+    .history {
+      margin-top: 15px;
+      text-align: left;
+      font-size: 14px;
+      max-height: 120px;
+      overflow-y: auto;
+    }
+
+    .history p {
+      margin: 4px 0;
     }
   </style>
 </head>
 <body>
 
-  <h1>My Calculator</h1>
+  <div class="calculator">
+    <button class="dark-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
-  <input type="number" id="num1" placeholder="First number">
-  <input type="number" id="num2" placeholder="Second number">
-  <br>
+    <h2>Calculator</h2>
 
-  <button onclick="calculate('+')">+</button>
-  <button onclick="calculate('-')">-</button>
-  <button onclick="calculate('*')">*</button>
-  <button onclick="calculate('/')">/</button>
+    <input type="number" id="num1" placeholder="First number">
+    <input type="number" id="num2" placeholder="Second number">
 
-  <h2 id="result">Result: </h2>
+    <div class="buttons">
+      <button onclick="calculate('+')">➕</button>
+      <button onclick="calculate('-')">➖</button>
+      <button onclick="calculate('*')">×</button>
+      <button onclick="calculate('/')">÷</button>
+    </div>
+
+    <div id="result">Result:</div>
+
+    <div class="history">
+      <strong>History:</strong>
+      <div id="historyList"></div>
+    </div>
+  </div>
 
   <script>
     function calculate(operator) {
-      let n1 = parseFloat(document.getElementById("num1").value);
-      let n2 = parseFloat(document.getElementById("num2").value);
+      const n1 = parseFloat(document.getElementById("num1").value);
+      const n2 = parseFloat(document.getElementById("num2").value);
+      const resultDiv = document.getElementById("result");
+      const history = document.getElementById("historyList");
+
+      if (isNaN(n1) || isNaN(n2)) {
+        resultDiv.innerText = "❌ Please enter both numbers";
+        return;
+      }
+
       let result;
+      let symbol;
 
-      if (operator === '+') result = n1 + n2;
-      if (operator === '-') result = n1 - n2;
-      if (operator === '*') result = n1 * n2;
-      if (operator === '/') result = n1 / n2;
+      if (operator === '+') {
+        result = n1 + n2;
+        symbol = "+";
+      } else if (operator === '-') {
+        result = n1 - n2;
+        symbol = "-";
+      } else if (operator === '*') {
+        result = n1 * n2;
+        symbol = "×";
+      } else if (operator === '/') {
+        if (n2 === 0) {
+          resultDiv.innerText = "❌ Cannot divide by zero";
+          return;
+        }
+        result = n1 / n2;
+        symbol = "÷";
+      }
 
-      document.getElementById("result").innerText = "Result: " + result;
+      resultDiv.innerText = "Result: " + result;
+
+      const record = document.createElement("p");
+      record.innerText = `${n1} ${symbol} ${n2} = ${result}`;
+      history.prepend(record);
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark");
     }
   </script>
 
