--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa">
 <head>
-  <title>ماشین حساب با صدا</title>
+  <meta charset="UTF-8">
+  <title>ماشین حساب پیشرفته با صدا</title>
   <style>
     body {
       font-family: Arial;
@@ -22,7 +23,7 @@
       background: white;
       padding: 25px;
       border-radius: 10px;
-      width: 320px;
+      width: 350px;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
       transition: 0.3s;
     }
@@ -48,6 +49,7 @@
       border-radius: 6px;
       background: #4CAF50;
       color: white;
+      transition: 0.3s;
     }
 
     .buttons button:hover {
@@ -67,115 +69,9 @@
     #result {
       margin-top: 10px;
       font-weight: bold;
-      color: #2196F3;
-    }
-
-    body.dark #result {
-      color: #90CAF9;
+      font-size: 18px;
     }
 
     .history {
       margin-top: 15px;
-      text-align: left;
-      font-size: 14px;
-      max-height: 120px;
-      overflow-y: auto;
-    }
-
-    .history p {
-      margin: 4px 0;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="calculator">
-    <button class="dark-toggle" onclick="toggleDarkMode()">🌙 حالت تاریک</button>
-
-    <h2>ماشین حساب</h2>
-
-    <input type="number" id="num1" placeholder="عدد اول">
-    <input type="number" id="num2" placeholder="عدد دوم">
-
-    <div class="buttons">
-      <button onclick="calculate('+')">➕</button>
-      <button onclick="calculate('-')">➖</button>
-      <button onclick="calculate('*')">×</button>
-      <button onclick="calculate('/')">÷</button>
-      <button onclick="startVoice()">🎤 صدا</button>
-    </div>
-
-    <div id="result">نتیجه:</div>
-
-    <div class="history">
-      <strong>تاریخچه:</strong>
-      <div id="historyList"></div>
-    </div>
-  </div>
-
-  <script>
-    // -----------------------------------
-    // Normal calculator function
-    function calculate(operator, n1Input, n2Input) {
-      const n1 = n1Input !== undefined ? parseFloat(n1Input) : parseFloat(document.getElementById("num1").value);
-      const n2 = n2Input !== undefined ? parseFloat(n2Input) : parseFloat(document.getElementById("num2").value);
-      const resultDiv = document.getElementById("result");
-      const history = document.getElementById("historyList");
-
-      if (isNaN(n1) || isNaN(n2)) {
-        resultDiv.innerText = "❌ لطفاً هر دو عدد را وارد کنید";
-        return;
-      }
-
-      let result;
-      let symbol;
-
-      if (operator === '+') { result = n1 + n2; symbol = "➕"; }
-      else if (operator === '-') { result = n1 - n2; symbol = "➖"; }
-      else if (operator === '*') { result = n1 * n2; symbol = "×"; }
-      else if (operator === '/') {
-        if (n2 === 0) { resultDiv.innerText = "❌ تقسیم بر صفر مجاز نیست"; return; }
-        result = n1 / n2; symbol = "÷";
-      }
-
-      resultDiv.innerText = "نتیجه: " + result;
-
-      const record = document.createElement("p");
-      record.innerText = `${n1} ${symbol} ${n2} = ${result}`;
-      history.prepend(record);
-    }
-
-    // Dark mode toggle
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark");
-    }
-
-    // -----------------------------------
-    // Voice recognition (Persian)
-    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-    recognition.lang = 'fa-IR'; // Persian
-    recognition.continuous = false;
-
-    recognition.onresult = function(event) {
-      const speech = event.results[0][0].transcript.toLowerCase();
-      processVoiceCommand(speech);
-    }
-
-    function startVoice() {
-      recognition.start();
-    }
-
-    function processVoiceCommand(command) {
-      const numbers = command.match(/\d+/g);
-      if(!numbers || numbers.length < 2) return alert("اعداد تشخیص داده نشد!");
-
-      if(command.includes("جمع")) calculate('+', numbers[0], numbers[1]);
-      else if(command.includes("تفریق") || command.includes("منهای")) calculate('-', numbers[0], numbers[1]);
-      else if(command.includes("ضرب")) calculate('*', numbers[0], numbers[1]);
-      else if(command.includes("تقسیم")) calculate('/', numbers[0], numbers[1]);
-      else alert("دستور شناخته نشد. لطفاً از جمع، تفریق، ضرب یا تقسیم استفاده کنید.");
-    }
-  </script>
-
-</body>
-</html>
+      text-align: left
