--- a/index.html
+++ b/index.html
@@ -74,4 +74,123 @@
 
     .history {
       margin-top: 15px;
-      text-align: left
+      text-align: left;
+      font-size: 14px;
+      max-height: 120px;
+      overflow-y: auto;
+    }
+
+    .history p {
+      margin: 4px 0;
+    }
+  </style>
+</head>
+<body>
+
+<div class="calculator">
+  <button class="dark-toggle" onclick="toggleDarkMode()">🌙 حالت تاریک</button>
+
+  <h2>ماشین حساب</h2>
+
+  <input type="number" id="num1" placeholder="عدد اول">
+  <input type="number" id="num2" placeholder="عدد دوم">
+
+  <div class="buttons">
+    <button onclick="calculate('+')">➕</button>
+    <button onclick="calculate('-')">➖</button>
+    <button onclick="calculate('*')">×</button>
+    <button onclick="calculate('/')">÷</button>
+    <button onclick="startVoice()">🎤 صدا</button>
+  </div>
+
+  <div id="result">نتیجه:</div>
+
+  <div class="history">
+    <strong>تاریخچه:</strong>
+    <div id="historyList"></div>
+  </div>
+</div>
+
+<script>
+  // -----------------------------------
+  // Persian numbers mapping 0-20
+  const persianNumbers = {
+    "صفر":0,"یک":1,"دو":2,"سه":3,"چهار":4,"پنج":5,"شش":6,"هفت":7,"هشت":8,"نه":9,
+    "ده":10,"یازده":11,"دوازده":12,"سیزده":13,"چهارده":14,"پانزده":15,"شانزده":16,
+    "هفده":17,"هجده":18,"نوزده":19,"بیست":20
+  };
+
+  // -----------------------------------
+  // Normal calculator function with colored results
+  function calculate(operator, n1Input, n2Input, isVoice=false) {
+    const n1 = n1Input !== undefined ? parseFloat(n1Input) : parseFloat(document.getElementById("num1").value);
+    const n2 = n2Input !== undefined ? parseFloat(n2Input) : parseFloat(document.getElementById("num2").value);
+    const resultDiv = document.getElementById("result");
+    const history = document.getElementById("historyList");
+
+    if(isNaN(n1) || isNaN(n2)){
+      resultDiv.innerText = "❌ لطفاً هر دو عدد را وارد کنید";
+      resultDiv.style.color = "red";
+      return;
+    }
+
+    let result, color, symbol;
+
+    if(operator === '+') { result = n1+n2; color="green"; symbol="➕"; }
+    else if(operator === '-') { result = n1-n2; color="pink"; symbol="➖"; }
+    else if(operator === '*') { result = n1*n2; color="orange"; symbol="×"; }
+    else if(operator === '/') { 
+      if(n2===0){ resultDiv.innerText="❌ تقسیم بر صفر مجاز نیست"; resultDiv.style.color="red"; return; }
+      result = n1/n2; color="blue"; symbol="÷"; 
+    }
+
+    // Voice results in purple
+    if(isVoice) color="purple";
+
+    resultDiv.innerText = "نتیجه: " + result;
+    resultDiv.style.color = color;
+
+    const record = document.createElement("p");
+    record.innerText = `${n1} ${symbol} ${n2} = ${result}`;
+    record.style.color=color;
+    history.prepend(record);
+  }
+
+  // -----------------------------------
+  // Dark mode
+  function toggleDarkMode(){ document.body.classList.toggle("dark"); }
+
+  // -----------------------------------
+  // Voice recognition in Persian
+  const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+  recognition.lang = 'fa-IR';
+  recognition.continuous = false;
+
+  recognition.onresult = function(event){
+    const speech = event.results[0][0].transcript.toLowerCase();
+    processVoiceCommand(speech);
+  }
+
+  function startVoice(){ recognition.start(); }
+
+  function processVoiceCommand(command){
+    const words = command.split(" ");
+    let numbers = [];
+
+    for(let word of words){
+      if(persianNumbers[word]!==undefined) numbers.push(persianNumbers[word]);
+    }
+
+    if(numbers.length<2){ alert("اعداد تشخیص داده نشد!"); return; }
+
+    if(command.includes("جمع")) calculate('+', numbers[0], numbers[1], true);
+    else if(command.includes("تفریق") || command.includes("منهای")) calculate('-', numbers[0], numbers[1], true);
+    else if(command.includes("ضرب")) calculate('*', numbers[0], numbers[1], true);
+    else if(command.includes("تقسیم")) calculate('/', numbers[0], numbers[1], true);
+    else alert("دستور شناخته نشد. لطفاً از جمع، تفریق، ضرب یا تقسیم استفاده کنید.");
+  }
+
+</script>
+
+</body>
+</html>
